knowledge_base/knowledge/v15/capl/structured/MOST/mostFiAmsReceive.md
# mostFiAmsReceive

> Category: `MOST` | Type: `function`

## Syntax

```c
mostFiAmsReceive(mostAmsMessage * msg);
```

## Description

Simulates the receipt of an AMS message to the simulation node (CAPL program or node layer module).

mostFiAmsReceive can only be used within the callback OnMostFiAmsPreReceive or OnMostFiAmsPreSend. If mostFiAmsReceive is called more than once within the callback, only the last fed-in message is passed on to the simulation node.

Altered received messages are neither displayed in the Trace Window nor logged. They are only visible for the one node in the Simulation Setup from which mostFiAmsReceive was called.

Exception: a CAPL program with fault injection for the MOST application socket (see mostAsFiEnable) can call mostFiAmsReceive as many times as necessary and at any time in order to simulate a received message to the CANoe-side application socket. These altered messages are then visible only for the services of the MOST application socket in CANoe.

## Parameters

| Name | Description |
|---|---|
| msg | AMS message that is to be received by the simulation node. |

## Return Values

—

## Example

See OnMostFiAmsPreReceive

## Availability

| CANalyzer | CANoe | CANoe4SW Server Edition (Windows) | CANoe4SW Server Edition (Linux) | CANoe4SW | vTESTstudio |  |
|---|---|---|---|---|---|---|
| Since Version | — | 7.2 | — | — | — | —✔ |
| Restricted To | — | MOST25 MOST50 MOST150 | — | — | — | —✔ |
| CANalyzer Measurement Setup (Transmit Branch) | — | N/A | N/A | N/A | N/A | — |
| CANoe Measurement Setup / CANalyzer Analysis Branch | — | — | — | — | N/A | —✔ |
| CANoe Simulation Setup | N/A | ✔ | — | — | N/A | —✔ |
| CANoe System and Communication Setup | N/A | ✔ | — | — | — | —✔ |
| CANoe Test Setup for Test Modules | N/A | ✔ | — | — | N/A | —✔ |
| CANoe Test Setup for Test Units | N/A | ✔ | — | — | — | —✔ |
| 32-Bit | — | ✔ | — | N/A | — | —✔ |
| 64-Bit | — | ✔ | — | — | — | —✔ |
